[package]
name = "lepus-elite"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lepus"
path = "src/main.rs"

[dependencies]
# eBPF framework
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

[build-dependencies]
aya-tool = "0.1"
